// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundleShortVersion 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "BundleShortVersion-2017.1-alpha5.dmg",
    },
  ],
}
`;

exports[`bundleShortVersion 2`] = `
Object {
  "AsarIntegrity": "{\\"checksums\\":{\\"app.asar\\":\\"hash\\",\\"electron.asar\\":\\"hash\\"}}",
  "BuildMachineOSBuild": "16G29",
  "CFBundleDisplayName": "BundleShortVersion",
  "CFBundleExecutable": "BundleShortVersion",
  "CFBundleIconFile": "BundleShortVersion.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "BundleShortVersion",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "2017.1-alpha5",
  "DTSDKBuild": "14D125",
  "DTSDKName": "macosx10.1010.10",
  "DTXcode": "0821",
  "DTXcodeBuild": "8C1002",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSMinimumSystemVersion": "10.9.0",
  "NSHighResolutionCapable": true,
  "NSMainNibFile": "MainMenu",
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`custom background - new way 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;

exports[`disable dmg icon (light), bundleVersion 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;

exports[`license buttons config 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;

exports[`license en 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;

exports[`license rtf 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;

exports[`license ru 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;

exports[`multi language license 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;

exports[`no Applications link 1`] = `
Array [
  Object {
    "x": 110,
    "y": 150,
  },
  Object {
    "path": "/Applications/TextEdit.app",
    "type": "link",
    "x": 410,
    "y": 440,
  },
]
`;

exports[`no Applications link 2`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "NoApplicationsLink-1.1.0.dmg",
    },
    Object {
      "arch": "x64",
      "file": "NoApplicationsLink-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
    },
  ],
}
`;

exports[`no background 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "NoBackground-1.1.0.dmg",
    },
  ],
}
`;

exports[`no build directory 1`] = `
Array [
  Object {
    "x": 130,
    "y": 220,
  },
  Object {
    "path": "/Applications",
    "type": "link",
    "x": 410,
    "y": 220,
  },
]
`;

exports[`no build directory 2`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "NoBuildDirectory-1.1.0.dmg",
    },
  ],
}
`;

exports[`unset dmg icon 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test ß No Volume Icon-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
    },
  ],
}
`;
